<resources>
    <string name="app_name">희망걷기대회</string>
    <string name="login_radio_btn01">개인</string>
    <string name="login_radio_btn02">단체</string>
    <string name="login_phone_ph">참가신청 시 입력된 휴대폰 번호</string>
    <string name="login_name_ph">참가신청 시 입력된 이름</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_btn_home">홈으로</string>
    <string name="login_code_ph">단체코드</string>
    <string name="bottom_tab_01">기록</string>
    <string name="bottom_tab_02">인증</string>
    <string name="bottom_tab_03">마이페이지</string>
    <string name="bottom_tab_04">설정</string>
    <string name="step_information">아래 걸음 시작 버튼을 꼭 눌러주세요!\n측정 화면을 켜야만 걸음 수가 측정됩니다.</string>
    <string name="step_start">걸음 시작</string>
    <string name="question_title">자주 묻는 질문</string>
    <string name="button_question">고객센터 문의하기</string>
    <string name="my_rating">나의순위</string>
    <string name="certification_text_example">\'홍길동\'님은 제 5회 STEP FOR WATER 희망걷기 대회에 참여하였고 6,000보 이상을 걸어 희망걷기 미션을 완료하여 아프리카 아이들에게 소중한 물을 기부하였기에 위 인증서를 수여합니다.</string>
</resources>